# mock-llm-server

./: .gitignore  Cargo.toml  README.md
fixtures/: demo_scenario.yaml
fixtures/manual/: anthropic_cache.yaml  compact.yaml  skill_load.yaml  skill_not_found.yaml  smoke.yaml  tool_error.yaml  tool_write_permission.yaml
src/: anthropic_sse.rs  decoder.rs  lib.rs  main.rs  mock_server.rs  openai_sse.rs  proxy.rs  response.rs
tests/: integration.rs
tests/fixtures/demo_dir/: 01_first.yaml  02_error.yaml
