[package]
name = "mock-llm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

# Dependencies for proxy and recording mode
reqwest = { version = "0.12", features = ["stream", "json"] }

eventsource-stream = "0.2"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-stream = "0.1"
bytes = "1.11.1"

[dev-dependencies]
